# BabylonNative

./: .apk_hash_cache  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  build_android.bat  copy_babylon_scripts.bat  run_android.bat  run_test.ps1  simple_test.bat  test.bat
Apps/: CMakeLists.txt  package-lock.json
Apps/ClipchampTests/: CMakeLists.txt  ClipchampCleanupTests.cpp  ClipchampErrorHandlingTests.cpp  ClipchampInitializationTests.cpp  ClipchampRenderingTests.cpp  ClipchampSuperfillIntegrationTests.cpp  IMPLEMENTATION_SUMMARY.md  README.md  TEST_COVERAGE_REPORT.md  TestMain.cpp  build.sh  validate_tests.sh
Apps/IntegrationTestApp/: CMakeLists.txt
Apps/IntegrationTestApp/src/: BabylonMath.h  GraphicsDebug.cpp  GraphicsDebug.h  babylonRenderer.cpp  babylonRenderer.h  main.cpp
Apps/Playground/: CMakeLists.txt
Apps/Playground/Android/: gradle.properties
Apps/Playground/Android/app/: CMakeLists.txt
Apps/Playground/Android/app/src/main/cpp/: BabylonNativeJNI.cpp
Apps/Playground/Scripts/: experience.js  playground_id_runner.js  playground_runner.js
Apps/Playground/UWP/: App.cpp
Apps/Playground/Win32/: App.cpp
Apps/Playground/iOS/: LibNativeBridge.mm  ViewController.swift
Apps/Playground/macOS/: ViewController.mm
Apps/Playground/visionOS/: App.swift  Info.plist  LibNativeBridge.h  LibNativeBridge.mm
Apps/UnitTests/: CLIPCHAMP_TESTS.md  CMakeLists.txt  ClipchampCMakeLists.txt  build_clipchamp_tests.sh
Apps/UnitTests/Scripts/: audio-tests.js  tests-begin.js  tests-end.js  tests.js  webaudio-tests.js
Apps/UnitTests/Shared/: ClipchampIOSTests.cpp  ClipchampJavaScriptTests.cpp  ClipchampTests.cpp  Scenario1.cpp  Shared.cpp  Shared.h  Tests.h  ThreadSafeActionQueue.h
Apps/UnitTests/iOS/: Scenario1.cpp
Apps/ValidationTests/: CMakeLists.txt
Core/Graphics/: CMakeLists.txt
Core/Graphics/Source/: DeviceImpl.cpp  DeviceImpl_macOS.mm  FrameBuffer.cpp
Dependencies/: CMakeLists.txt
Dependencies/UrlLib/: CMakeLists.txt
Dependencies/UrlLib/Source/: UrlRequest_Windows.cpp  UrlRequest_Windows_Shared.h
Dependencies/xr/: CMakeLists.txt
Dependencies/xr/Source/ARKit/: XR.mm
Dependencies/xr/Source/VisionOS/: XR.mm
Dependencies/xr/Source/VisionOS/Include/: IXrContextVisionOS.h
Dependencies/xr/Source/visionOS/: XR.mm
Dependencies/xr/Source/visionOS/Include/: IXrContextVisionOS.h  IXrContextvisionOS.h
Plugins/: CMakeLists.txt
Plugins/NativeCamera/: CMakeLists.txt
Plugins/NativeCamera/Source/Apple/: NativeCameraImpl.mm
Plugins/NativeCamera/Source/VisionOS/: CameraDevice.cpp
Plugins/NativeEngine/Source/: NativeEngine.cpp  NativeEngine.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h
Plugins/NativeXr/Source/: NativeXrImpl.cpp  XR.h  XRSession.cpp  XRSession.h
Polyfills/: CMakeLists.txt
Polyfills/AudioContext/: CMakeLists.txt
Polyfills/AudioContext/Include/Babylon/Polyfills/: AudioContext.h
Polyfills/AudioContext/Source/: AudioContext.cpp  AudioContext.h
Polyfills/WebAudio/: CMakeLists.txt
Polyfills/WebAudio/Include/Babylon/Polyfills/: WebAudio.h
Polyfills/WebAudio/Source/: WebAudio.cpp
Polyfills/Window/Source/: TimeoutDispatcher.cpp  TimeoutDispatcher.h
logs/: android_logs_2025-08-01_23-42-11.txt  android_logs_2025-08-01_23-50-06.txt  android_logs_2025-08-01_23-56-14.txt  android_logs_2025-08-02_00-09-27.txt  android_logs_2025-08-02_00-13-27.txt
